# PatchHound

./: .gitignore  PatchHound.py  README.md  pyproject.toml
.github/workflows/: pylint.yml
src/: audit.py  auth.py  clean.py  conn.py  misc.py  patch.py  policy.py  pwetty.py  search.py
